--- a/src/uLearn.Web/Views/Account/Profile.cshtml
+++ b/src/uLearn.Web/Views/Account/Profile.cshtml
@@ -108,13 +108,13 @@
 
 	<div class="user-profile__rights-history">
 		<h2>История назначений ролей и прав</h2>
-		@if (Model.RolesHistory.Count == 0 && Model.AccessesHistory.Count == 0)
+		@if (Model.CoursesWithRoles.Count == 0 && Model.CoursesWithAccess.Count == 0)
 		{
 			<p class="help-block">Отсуствует</p>
 		}
 		<ol>
 			@{
-				var courseIds = Model.AccessesHistory.Select(x => x.Key).Concat(Model.RolesHistory.Select(x => x.Key)).Distinct();
+				var courseIds = Model.CoursesWithAccess.Concat(Model.CoursesWithRoles).Distinct();
 			}
 			@foreach (var courseId in courseIds)
 			{
