navigation refactor, added scroll to top on next unit button click

--- a/src/Frontend/src/components/course/Navigation/Unit/NavigationItem/NavigationItem.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NavigationItem/NavigationItem.less
@@ -167,7 +167,7 @@
 .exerciseIcon {
   letter-spacing: 2px;
   padding-left: 2px;
-  font-family: monospace;
+  font-family: Consolas, monospace;
 }
 
 .complete {
