--- a/src/Frontend/src/components/flashcards/UnitPage/ShortQuestions/shortQuestions.less
+++ b/src/Frontend/src/components/flashcards/UnitPage/ShortQuestions/shortQuestions.less
@@ -6,12 +6,12 @@
 .questionsContainer {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
   margin-top: 30px;
 }
 
 .questionsTextContainer {
   margin: 0;
+  max-width: calc(100% - 150px);
 }
 
 .listElement {
@@ -40,7 +40,7 @@
   line-height: 18px;
 
   display: inline-block;
-  background: #C4C4C4;
+  background: @metroDefault;
   border-radius: 50%;
   box-sizing: border-box;
   margin-left: -40px;
@@ -55,9 +55,7 @@
 
 .toggleContainer {
   flex-shrink: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  margin-left: 15px;
 }
 
 .toggleText {
@@ -79,6 +77,7 @@
   .questionsTextContainer {
     padding-left: 25px;
     margin-top: 10px;
+    max-width: 100%;
   }
 
   .listElement {
@@ -91,5 +90,9 @@
 
   .toggleText {
     font-size: 13px;
+  }
+
+  .toggleContainer {
+    margin-left: 0;
   }
 }
