--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -23,7 +23,7 @@
 	mainDivClass = "slide-container";
 }
 
-<div class="@mainDivClass" style="padding-left: 20px">
+<div class="@mainDivClass" >
 	<div class="container body-content">
 		<div class="row">
 			<div class="slide">
