Changed z-indexes of header, main, aside, flashcards components
Moved z-indexes to variables.less to have more easily control of them.
ISSUE: Unfortunatily loader now overlaping nav menu in phone mode.

--- a/src/Frontend/src/components/course/Navigation/Navigation.less
+++ b/src/Frontend/src/components/course/Navigation/Navigation.less
@@ -1,6 +1,6 @@
 @import "../../../variables.less";
 
-@rootZIndex: 3;
+@rootZIndex: @asideZIndex;
 @contentZIndex: 3;
 @overlayZIndex: @contentZIndex - 1;
 
@@ -71,7 +71,6 @@
     position: relative;
     left: 0;
     transition: none;
-    z-index: 1;
   }
 
   .contentWrapper {
