--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -42,3 +42,8 @@
 @statusExcellentColor: #49B52A;
 
 @defaultFonts: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
+
+@headerZIndex: 7;
+@asideZIndex: 7;
+@mainZIndex: 0;
+@flashcardsOverlayZIndex: @asideZIndex;
