--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: @headerZIndex;
   background-color: white;
   margin-bottom: 10px;
   font-family: "Segoe UI", "Helvetica Neue", sans-serif;
