--- a/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
@@ -6,10 +6,11 @@
 @textAppearAnimationDuration: 0.3s;
 @modalBackgroundColor: #fff;
 @modalZIndex: 10;
+@overlayZIndex: @flashcardsOverlayZIndex;
 
 .overlay {
   position: fixed;
-  z-index: 10;
+  z-index: @overlayZIndex;
   left: 0;
   top: 0;
   bottom: 0;
@@ -58,7 +59,7 @@
   z-index: @modalZIndex - 1;
   background: darken(@modalBackgroundColor, 10%);
 
-  &.move{
+  &.move {
     animation-duration: @moveAnimationDuration;
     animation-name: moveFromSecondToFirst;
   }
@@ -82,7 +83,7 @@
   z-index: @modalZIndex - 2;
   background: darken(@modalBackgroundColor, 15%);
 
-  &.move{
+  &.move {
     animation-duration: @moveAnimationDuration;
     animation-name: moveFromThirdToSecond;
   }
@@ -139,7 +140,7 @@
   font-size: 14px;
   line-height: 28px;
 
-  & > span{
+  & > span {
     padding: 3px 9px;
     margin: 5px;
     border-radius: 2px;
@@ -163,6 +164,10 @@
     transform: translate(-50%, -50%) translateY(40px);
     padding: 26px 10px;
     border-radius: 0;
+  }
+
+  .overlay {
+    z-index: @overlayZIndex - 1;
   }
 
   .secondModal {
