Navigation metro bug fixed

--- a/src/Frontend/src/components/course/Navigation/Unit/NavigationItem/NavigationItem.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NavigationItem/NavigationItem.less
@@ -104,7 +104,7 @@
     width: 4px;
     top: 0;
     left: 0;
-    bottom: 21px;
+    bottom: calc(100% - 17px);
     background-color: @metroDefault;
   }
 
@@ -189,7 +189,7 @@
     left: 30px;
 
     &:after {
-      top: 21px;
+      top: 17px;
     }
   }
 
