Increased padding of NextUnit in uni navigation and Flashcards in course navigation
Also moved arrow to center

--- a/src/Frontend/src/components/course/Navigation/Unit/NextUnit/NextUnit.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NextUnit/NextUnit.less
@@ -11,7 +11,7 @@
 
   justify-content: space-between;
   align-items: center;
-  padding: 8px 12px 9px 14px;
+  padding: 8px 12px 20px 14px;
   background: #fff;
   border: none;
   border-top: 1px solid @borderColor;
@@ -70,6 +70,9 @@
 }
 
 .arrow {
+  position: relative;
+  top: 5px;
+
   color: @geinsboro;
   flex-shrink: 0;
 }
@@ -85,7 +88,7 @@
 @media (min-width: @maxLaptopWidth) {
   .root {
     width: 360px;
-    padding: 13px 12px 14px 24px;
+    padding: 13px 12px 20px 24px;
   }
 
   .text {
