add xsd validation after course load

--- a/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
+++ b/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
@@ -68,6 +68,10 @@
 			<h3>Результат проверки орфографии:</h3>
 			<div class="load-content" data-url="@Url.Action("SpellingErrors", new { Model.VersionId })"> processing... </div>
 		</div>
+		if (!string.IsNullOrEmpty(Model.Warnings))
+		{
+			<div style="white-space: pre-wrap">@Model.Warnings</div>
+		}
 
 		if (Model.IsDiagnosticsForVersion)
 		{
