--- a/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
@@ -51,6 +51,8 @@
   box-sizing: border-box;
   box-shadow: inset 0 0 0 2px #fff;
 
+  border: 1px solid;
+
   text-align: center;
   font-size: 36px;
   line-height: 25px;
@@ -85,25 +87,25 @@
 
 .resultsVeryBad {
   background: @statusVeryBadColor;
-  border: 1px solid @statusVeryBadColor;
+  border-color: @statusVeryBadColor;
 }
 
 .resultsBad {
   background: @statusBadColor;
-  border: 1px solid @statusBadColor;
+  border-color: @statusBadColor;
 }
 
 .resultsAverage {
   background: @statusAverageColor;
-  border: 1px solid @statusAverageColor;
+  border-color: @statusAverageColor;
 }
 
 .resultsGood {
   background: @statusGoodColor;
-  border: 1px solid @statusGoodColor;
+  border-color: @statusGoodColor;
 }
 
 .resultsExcellent {
   background: @statusExcellentColor;
-  border: 1px solid @statusExcellentColor;
+  border-color: @statusExcellentColor;
 }
