--- a/src/Frontend/src/components/flashcards/Guides/guides.less
+++ b/src/Frontend/src/components/flashcards/Guides/guides.less
@@ -28,7 +28,7 @@
   border-radius: 50%;
   border: 1px solid @guideIconColor;
   box-sizing: border-box;
-  box-shadow: inset 0 0 0 2px #fff;
+  box-shadow: inset 0 0 0 2px #ffffff;
 }
 
 @media (max-width: @maxPhoneWidth) {
