--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -2,8 +2,19 @@
 @maxTabletWidth: 991px;
 @maxPhoneWidth: 767px;
 
+@navigationMenuWidth: 250px;
+@laptopNavigationMenuWidth: 360px;
+
 @headerHeight: 50px;
 @headerDivider: 10px;
+
+@headerZIndex: 7;
+@asideZIndex: 7;
+@mainZIndex: 0;
+@flashcardsOverlayZIndex: @asideZIndex;
+
+@defaultFonts: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
+
 @negativeColor: #CE0014;
 @likeColor: #D70C17;
 @accentColor: #F69C00;
@@ -40,10 +51,3 @@
 @statusAverageColor: #F1C527;
 @statusGoodColor: #A1E236;
 @statusExcellentColor: #49B52A;
-
-@defaultFonts: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
-
-@headerZIndex: 7;
-@asideZIndex: 7;
-@mainZIndex: 0;
-@flashcardsOverlayZIndex: @asideZIndex;
