--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -8,23 +8,24 @@
 .pageWrapper {
   position: relative;
 
-  width: 100%;
-  max-width: calc(100vw - 40px);
-  margin-left: 20px;
-  margin-right: 20px;
-}
+  width: 100vw;
 
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 @media (min-width: @maxPhoneWidth) {
   .pageWrapper {
     max-width: calc(100vw - 40px - 250px);
+    padding-top: 28px;
   }
 }
 
 @media (min-width: @maxLaptopWidth) {
   .pageWrapper {
     max-width: 862px;
-    margin-left: 32px;
+    padding-left: 32px;
+    padding-top: 40px;
   }
 
   .root {
