fix paths to static

--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -43,7 +43,7 @@
 							).ToArray();
 					}
 					@{
-						var baseUrl = "http://localhost:1337/"+slide.Info.Directory.FullName;
+						var baseUrl = "/"+slide.Info.Directory.FullName;
 					}
 					@SlideHtml.Slide(new BlockRenderContext(course, slide, baseUrl, 
 						blockData,
