--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -8,7 +8,8 @@
 .pageWrapper {
   position: relative;
 
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
 
   padding-left: 20px;
   padding-right: 20px;
