--- a/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
@@ -2,7 +2,6 @@
 
 .root {
   font-family: @defaultFonts;
-  height: 140px;
 }
 
 .headerText {
@@ -13,18 +12,18 @@
 }
 
 .footer {
-  height: 30px;
-
-  padding-left: 18px;
+  padding-left: 15px;
 
   color: @additionalColor;
   font-size: 10px;
-  line-height: 30px;
+  letter-spacing: 1.2px;
+  line-height: 1.2;
   text-transform: uppercase;
+  font-weight: lighter;
 }
 
 .footerLine {
-  width: 280px;
+  width: 274px;
   height: 0;
 
   display: inline-block;
@@ -38,6 +37,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+
+  margin-bottom: 6px;
 }
 
 .resultsElement {
