--- a/src/Frontend/src/components/flashcards/UnitPage/UnitCard/unitCard.less
+++ b/src/Frontend/src/components/flashcards/UnitPage/UnitCard/unitCard.less
@@ -1,14 +1,21 @@
 @import "../../../../variables.less";
 
 @cardsContainerMaxWidth: 700px;
-@cardsContainerHeight: 380px;
+@cardsContainerHeight: 397px;
 @cardWidth: 100%;
-@cardHeight: @cardsContainerHeight - 40px;
+@cardHeight: @cardsContainerHeight - 59px;
+
+@secondCardWidthDecrease: 22px;
+@secondCardHeightDecrease: 8px;
+@thirdCardWidthDecrease: 46px;
+@thirdCardHeightDecrease: 17px;
 
 .unitCardContainer {
   width: 100%;
   max-width: @cardsContainerMaxWidth;
   height: @cardsContainerHeight;
+
+  margin-bottom: 25px;
 
   font-family: @defaultFonts;
   color: @whiteSmoke;
@@ -25,19 +32,25 @@
   position: absolute;
 
   border-radius: 10px;
-  padding: 22px;
+  padding: 35px 28px 22px;
   background: @flashcardUnitBackgroundBlue;
 }
 
 .unitCardNext {
-  transform: translateY((@cardsContainerHeight - @cardHeight)/2) scale(0.95, 0.95);
+  width: calc(@cardWidth - @secondCardWidthDecrease * 2);
+  height: calc(@cardHeight - @secondCardHeightDecrease * 2);
+
+  transform: translate(@secondCardWidthDecrease, calc(@cardsContainerHeight - @cardHeight - @secondCardHeightDecrease));
   z-index: -2;
 
   background: darken(@flashcardUnitBackgroundBlue, 10%);
 }
 
 .unitCardLast {
-  transform: scale(0.90, 0.90);
+  width: calc(@cardWidth - @thirdCardWidthDecrease * 2);
+  height: calc(@cardHeight - @thirdCardHeightDecrease * 2);
+
+  transform: translate(@thirdCardWidthDecrease, calc(@cardsContainerHeight - @cardHeight - @thirdCardHeightDecrease));
   z-index: -3;
 
   background: darken(@flashcardUnitBackgroundBlue, 15%);
@@ -58,7 +71,7 @@
 .unitCardTitle {
   max-height: @cardHeight - 140px;
 
-  margin: 0;
+  margin: 0 0 17px;
 
   font-size: 40px;
   line-height: 42px;
@@ -68,7 +81,6 @@
 }
 
 .unitCardBody {
-  margin-top: 18px;
   margin-bottom: 0;
 
   font-size: 18px;
