--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -1,11 +1,14 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using Database.Models
+@using OfficeOpenXml.FormulaParsing.Excel.Functions.Math
+@using Ulearn.Common.Extensions
 @using uLearn.Web.Views.Course
 @using uLearn.Web.Views.SlideNavigation
 @using Ulearn.Core.Courses
 @using Ulearn.Core.Courses.Slides
 @using Ulearn.Core.Courses.Slides.Exercises
 @using Ulearn.Core.Courses.Slides.Exercises.Blocks
+@using Ulearn.Core.Courses.Slides.Flashcards
 @using Ulearn.Core.Courses.Slides.Quizzes
 @using Ulearn.Core.Courses.Slides.Quizzes.Blocks
 
@@ -26,7 +29,7 @@
 			@TableOfContents.Toc(toc)
 		</div>
 
-		<div class="slide-container">
+		<div class="slide-container" style="padding-left: 365px">
 			<div class="container body-content">
 				<div class="row">
 					@{
@@ -51,6 +54,11 @@
 						revealHidden: true
 						),
 						null)
+					@if (slide is FlashcardSlide)
+					{
+						var flashcards = ((FlashcardSlide)slide).FlashcardsList.Select(x => new { answer = x.RenderAnswer(), question = x.RenderQuestion(), unitTitle = slide.Info.Unit.Title }).ToArray();
+						<div class="react-render" data-component="CourseToolUnitPage" data-props="@( new {flashcards= flashcards}.JsonSerialize())"></div>
+					}
 					<div style="margin-bottom: 40px;">
 						<a href="/@(slide.Index.ToString("000")).html?query=addLesson" class="btn btn-default">Добавить слайд</a>
 						<a href="/@(slide.Index.ToString("000")).html?query=addQuiz" class="btn btn-default">Добавить тест</a>
