--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -70,7 +70,7 @@
 
 		@foreach (var jsFile in jsFiles)
 		{
-			<script src='@jsFile'></script>
+			<script src='@jsFile' type='application/javascript'></script>
 		}
         <script>
             for (var i = 0; i < window.documentReadyFunctions.length; i++) {
