Главная: удалил курс по ИИ, добавил курс Ввведение в математику.

--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Главная";
+	ViewBag.Title = "Главная";
 }
 <div class="main-page">
 	<div class="container body-content">
@@ -14,26 +14,26 @@
 			<div class="course-tile col-md-6">
 				<h2>Основы программирования на примере C#. Часть 1</h2>
 				<p>
-					Длительность курса: 1 семестр, 3–6 часов в неделю.
+					Длительность курса: 1 семестр, 3&ndash;6 часов в неделю.
 				</p>
 				<p>
 					Курс разработан для студентов первого года обучения компьютерных специальностей УрФУ.
-					Рассчитан на людей с минимальным опытом программирования и знакомит 
-					с основами синтаксиса C# и стандартными классами .NET, с основами ООП 
+					Рассчитан на людей с минимальным опытом программирования и знакомит
+					с основами синтаксиса C# и стандартными классами .NET, с основами ООП
 					и базовыми алгоритмами.
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, new { @class = "btn btn-primary" })</p>
 			</div>
 			<div class="course-tile col-md-6">
 				<h2>Основы программирования на примере C#. Часть 2</h2>
-				<p>Длительность курса: 1 семестр, 3–6 часов в неделю.</p>
+				<p>Длительность курса: 1 семестр, 3&ndash;6 часов в неделю.</p>
 				<p>
-					Вторая часть курса Основы программирования на C# знакомит 
-					с более сложными языковыми конструкциями: 
-					обобщёнными типами (generics), 
-					генераторами последовательностей, 
-					LINQ, 
-					а также с джентельменским набором алгоритмов и структур данных. 
+					Вторая часть курса Основы программирования на C# знакомит
+					с более сложными языковыми конструкциями:
+					обобщёнными типами (generics),
+					генераторами последовательностей,
+					LINQ,
+					а также с джентельменским набором алгоритмов и структур данных.
 					Рассчитан на людей, знакомых с основами синтаксиса C#.
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming2" }, new { @class = "btn btn-primary" })</p>
@@ -45,13 +45,13 @@
 					Проектирование <nobr>на языке C#</nobr>
 				</h2>
 				<p>
+					Длительность: 1 семестр, 1&ndash;2 часа в неделю
+				</p>
+				<p>
 					Продолжение курса «Основы программирования».
 					Внутри вы узнаете об&nbsp;основах объектно-ориентированного программирования
 					и&nbsp;шаблонах проектирования ПО. Будет полезно для тех, кто прошёл курс «Основы программирования»,
 					или для тех, кто уже владеет другим языком программирования.
-				</p>
-				<p>
-					Длительность: 1 семестр, 1–2 часа в неделю
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "CS2" }, new { @class = "btn btn-primary" })</p>
 			</div>
@@ -69,7 +69,7 @@
 			<div class="course-tile col-md-6">
 				<h2>Практикум по языку запросов LINQ</h2>
 				<p>
-				Длительность миникурса: 2–4 часа.
+					Длительность миникурса: 2&ndash;4 часа.
 				<p>
 					В C# существует набор методов для декларативного описания
 					манипуляции с данными — LINQ.
@@ -91,11 +91,11 @@
 					Тестирование&nbsp;ПО
 				</h2>
 				<p>
-					Курс дает базовые знания о&nbsp;тестировании программного обеспечения,
-					знакомит с&nbsp;процессом разработки, инструментами и&nbsp;теорией тестирования.
+					Длительность: 1 месяц, 3&ndash;4 часа в неделю
 				</p>
 				<p>
-					Длительность: 1 месяц, 3&ndash;4 часа в неделю
+					Курс дает базовые знания о&nbsp;тестировании программного обеспечения,
+					знакомит с&nbsp;процессом разработки, инструментами и&nbsp;теорией тестирования.
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Testing" }, new { @class = "btn btn-primary" })</p>
 			</div>
@@ -104,7 +104,7 @@
 			<div class="course-tile col-md-6">
 				<h2>Оценка сложности алгоритмов</h2>
 				<p>
-				Длительность миникурса: 2 часа.
+					Длительность миникурса: 2 часа.
 				<p>
 					Короткий курс-практикум, развивающий навык быстрой оценки сложности
 					алгоримов и кода, который ежедневно пишут программисты.
@@ -117,18 +117,26 @@
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "complexity" }, new { @class = "btn btn-primary" })</p>
 			</div>
 			<div class="course-tile col-md-6">
-				<h2>Искусственный интеллект и машинное обучение</h2>
-				<p>Длительность: 1 семестр, 1-2 часа в неделю</p>
+				<h2>Введение в математику</h2>
+				<p>Длительность: 7 тем, 3&ndash;5 часов на тему</p>
 				<p>
-
+					Школьная математика достаточно далека от настоящей математики.
+					И прежде, чем осваивать ландшафт взрослой математики,
+					надо выучить язык, на котором предстоит это делать.
+					Курс знакомит с основополагающими понятиями:
+					множества, отношения, отображения и операции на множестве,
+					графы,
+					метод математической индукции,
+					основные комбинаторные схемы,
+					элементы математической логики.
 				</p>
-				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "AIML" }, new { @class = "btn btn-primary" })</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "math" }, new { @class = "btn btn-primary" })</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="course-tile col-md-6">
 				<h2>Компьютерные сети</h2>
-				<p>Длительность: 1 семестр, 2-4 часа в неделю</p>
+				<p>Длительность: 1 семестр, 2&ndash;4 часа в неделю</p>
 				<p>
 					Курс разработан для студентов второго года обучения компьютерных специальностей УрФУ.
 					В курсе рассматриваются основы компьютерных сетей до транспортного уровня модели OSI.
@@ -148,13 +156,13 @@
 				</p>
 			</div>
 		</div>
-		
+
 		@Html.Partial("~/Views/Shared/_Footer.cshtml")
 	</div>
 </div>
 
 @section scripts {
-    <script>
+	<script>
 		uploadVisits("@Url.Action("Upload", "Visits")")
-    </script>
+	</script>
 }
