--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -15,6 +15,16 @@
   padding-right: 20px;
 }
 
+.ltiPageWrapper{
+  position: relative;
+
+  width: 100%;
+  max-width: 100vw;
+
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 @media (min-width: @maxPhoneWidth) {
   .pageWrapper {
     max-width: calc(100vw - 40px - 250px);
