Removed bootsrap.min.css and refactored styles

--- a/src/Frontend/src/components/course/Navigation/Course/Flashcards/Flashcards.less
+++ b/src/Frontend/src/components/course/Navigation/Course/Flashcards/Flashcards.less
@@ -11,6 +11,7 @@
   border-top: 1px solid @borderColor;
   box-shadow: none;
   text-align: left;
+  text-decoration: none;
   padding: 8px 12px 20px 14px;
   cursor: pointer;
   transition: left 300ms ease-in-out;
