--- a/src/Frontend/src/components/course/Navigation/Unit/NavigationHeader/NavigationHeader.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NavigationHeader/NavigationHeader.less
@@ -8,6 +8,8 @@
 .breadcrumbs {
   margin-left: -9px; // Неаккуратно, надо подумать, что с этим сделать
   margin-bottom: 6px;
+
+  overflow: hidden;
 }
 
 .h2 {
