--- a/src/Frontend/src/components/course/Navigation/Unit/NextUnit/NextUnit.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NextUnit/NextUnit.less
@@ -16,6 +16,7 @@
   border: none;
   border-top: 1px solid @borderColor;
   box-shadow: none;
+  text-decoration: none;
   text-align: left;
   cursor: pointer;
   transition: left 300ms ease-in-out;
