--- a/src/Frontend/src/components/flashcards/CourseFlashcardsPage/CourseCards/courseCards.less
+++ b/src/Frontend/src/components/flashcards/CourseFlashcardsPage/CourseCards/courseCards.less
@@ -21,6 +21,7 @@
   background: @flashcardUnitBackgroundBlue;
 
   font-family: @defaultFonts;
+  text-decoration: none;
   color: @whiteSmoke;
 }
 
