Untouchable header buttons bug fixed
incorrect indexes caused overlapping header by navigation root.

--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -9,9 +9,9 @@
 @headerDivider: 10px;
 
 @headerZIndex: 7;
-@asideZIndex: 7;
+@asideZIndex: 6;
 @mainZIndex: 0;
-@flashcardsOverlayZIndex: @asideZIndex;
+@flashcardsOverlayZIndex: @headerZIndex;
 
 @defaultFonts: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
 
