--- a/src/uLearn.Web/Content/analytics.css
+++ b/src/uLearn.Web/Content/analytics.css
@@ -70,7 +70,7 @@
 	height: 30px;
 }
 
-.legacy-page .analytics__dashboard .student:nth-child(2n+1) {
+.legacy-page .analytics__dashboard .student:nth-child(odd) {
 	background-color: #f5f5f5;
 }
 
