--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -1,9 +1,10 @@
+@maxContentWidth: 1400px;
 @maxLaptopWidth: 1280px;
 @maxTabletWidth: 991px;
 @maxPhoneWidth: 767px;
 
 @navigationMenuWidth: 250px;
-@laptopNavigationMenuWidth: 360px;
+@maxNavigationMenuWidth: 360px;
 
 @headerHeight: 50px;
 @headerDivider: 10px;
