--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -100,6 +100,10 @@
     color: #666;
     user-select: none;
 
+    @media (min-width: @maxContentWidth) {
+      right: calc((100vw - @maxContentWidth) / 2);
+    }
+
     > * {
       display: inline-block;
       vertical-align: top;
@@ -316,5 +320,11 @@
 @media (max-width: @maxPhoneWidth) {
   .phoneHeaderElementsContainer {
     display: inline-flex;
+  }
+}
+
+@media (min-width: @maxContentWidth) {
+  .header {
+    padding: 0 calc((100vw - @maxContentWidth) / 2);
   }
 }
