--- a/src/Frontend/src/components/course/Navigation/Navigation.less
+++ b/src/Frontend/src/components/course/Navigation/Navigation.less
@@ -82,11 +82,14 @@
 
 @media (min-width: @maxLaptopWidth) {
   .root {
-    width: @laptopNavigationMenuWidth;
-    max-width: @laptopNavigationMenuWidth;
+    width: @maxNavigationMenuWidth;
+    max-width: @maxNavigationMenuWidth;
   }
 
   .contentWrapper {
-    width: @laptopNavigationMenuWidth;
+    width: @maxNavigationMenuWidth;
+    bottom: 0;
+    border-right: 1px solid @borderColor;
+    border-left: 1px solid @borderColor;
   }
 }
